# MaxaMem

./: .gitignore  Makefile  MaxaMem.kdev4  README.md  SYNC_TEST_1754601443.md  SYNC_TEST_1754601899.md  docker-compose.yml
.kdev4/: MaxaMem.kdev4
Implementation_Docs/: MaxaMem-Development-Plan.md  Technical-Architecture-and-Implementation-Guide.md  blueprint.json
Setup_Docs/: setup-script-sh-codex
backend/: Cargo.toml  Dockerfile
backend/src/: auth.rs  config.rs  db.rs  main.rs  main_complex.rs  models.rs
backend/src/api/: auth.rs  auth_complex.rs  mod.rs  projects.rs  projects_complex.rs
backend/src/services/: project.rs
docgen-saas/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  run.sh
docgen-saas/.github/workflows/: ci.yml
docgen-saas/backend/: Cargo.toml
docgen-saas/backend/src/: main.rs
docgen-saas/frontend/: index.html  package.json  pnpm-lock.yaml
docgen-saas/frontend/src/: App.tsx
docgen-saas/frontend/src/components/: GenerationProgress.tsx  PromptEditor.tsx
docgen-saas/frontend/src/hooks/: useGeneration.ts
docgen-saas/frontend/src/pages/: ProjectWizard.tsx
docgen-saas/migrations/: 001_initial_schema.sql
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/pages/: AuthPage.tsx  DashboardPage.tsx  HomePage.tsx
frontend/src/services/: api.ts  projects.ts
frontend/src/stores/: authStore.ts
frontend/src/types/: index.ts
maxamem/: README.md  docker-compose.yml  run.sh
maxamem/backend/: Cargo.toml
maxamem/backend/src/: main.rs
maxamem/frontend/: index.html  package.json
maxamem/frontend/src/: App.tsx
migrations/: 001_initial_schema.sql
