[package]
name = "maxamem-backend"
version = "1.0.0"
edition = "2021"
authors = ["MaxaMem Team"]
description = "MaxaMem AI-powered project architecture generator backend"

[[bin]]
name = "maxamem-backend"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Environment configuration
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"